--- a/src/components/domain/HomeCalendar.css
+++ b/src/components/domain/HomeCalendar.css
@@ -1,11 +1,13 @@
 .react-calendar {
   width: 100%;
   border: none;
+  font-family: 'Paperlogy', sans-serif;
 }
 
 .react-calendar__navigation {
   display: flex;
   gap: 6px;
+  margin-left: 12px;
 }
 
 .react-calendar__navigation button:hover,
@@ -25,7 +27,7 @@
 .react-calendar__tile {
   border-radius: 100%;
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   aspect-ratio: 1 / 1;
 }
