--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -26,6 +26,14 @@
     font-display: swap;
   }
 
+  @font-face {
+    font-family: Jalnan;
+    font-weight: 300;
+    src: url('/src/assets/fonts/JALNAN.ttf') format('truetype');
+    font-style: normal;
+    font-display: swap;
+  }
+
   html {
     font-family: 'Paperlogy', sans-serif;
     font-optical-sizing: auto;
